--- a/index.html
+++ b/index.html
@@ -16,11 +16,33 @@
 
     <main>
 
-        <section class="section-1">
+        <section class="section-1 container text-center mt-4">
+            <img src="./img/pokemon_logo.png" alt="pokemon-logo" style="width: 610px; height: 225px;">
 
+            <form class="d-flex justify-content-center w-100 gap-3 text-center mt-5">
+
+                <select class="form-select">
+                    <option selected>Gross</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+
+                <select class="form-select">
+                    <option selected>Aa-Zz</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                    <option value="3">Three</option>
+                </select>
+
+                <button class="btn bg-light" type="submit">Button</button>
+
+            </form>
         </section>
 
-        <section class="section-2">
+        <section class="section-2 container">
 
         </section>
 
