--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <main>
 
         <section class="section-1 container text-center mt-4">
-            <img src="./img/pokemon_logo.png" alt="pokemon-logo" style="width: 610px; height: 225px;">
-
+            <img src="./img/pokemon_logo.png" alt="pokemon-logo">
+            <!-- 
             <form class="d-flex justify-content-center w-100 gap-3 text-center mt-5">
 
                 <select class="form-select">
@@ -39,14 +39,39 @@
 
                 <button class="btn bg-light" type="submit">Button</button>
 
-            </form>
+            </form> -->
         </section>
 
-        <section class="section-2 container">
+        <section class="section-2 container mt-5">
+
+            <!-- <div class="text-center" id="div-1">
+
+                <img src="./img/logo.png" alt="" class="hayvon">
+                <span></span>
+
+                <div class="bottom">
+                    <div class="info-1 d-flex justify-content-between align-items-center">
+                        <p class="p-1">Pokemons</p>
+                        <img src="./img/Mask.png" alt="">
+                    </div>
+                    <p class="p-2 text-start">Grass, Poison</p>
+
+                    <div class="info-2 d-flex align-items-center gap-3">
+                        <p class="p-1">6.9 kg</p>
+                        <p class="p-1">99 age</p>
+                    </div>
+
+                </div>
+            </div> -->
+
 
         </section>
 
     </main>
+
+
+    <script src="./Js/pokemons.js"></script>
+    <script src="./Js/script.js"></script>
 
 </body>
 
